add event comments
