# internal/controller/httpserver/new.go
@@ -19,7 +19,7 @@ type GroupService interface {
 	GetGroupByID(ctx context.Context, userID, groupID uuid.UUID) (*models.Group, error)
 	GetGroupMembers(ctx context.Context, userID, groupID uuid.UUID) ([]models.User, error)
 
-	CreateGroup(ctx context.Context, creatorID uuid.UUID, group *models.Group) (*models.Group, error)
+	CreateGroup(ctx context.Context, creatorID uuid.UUID, group models.CreateGroupRequest) (*models.Group, error)
 	JoinGroup(ctx context.Context, userID uuid.UUID, code string) error
 
 	UpdateGroup(ctx context.Context, userID uuid.UUID, group models.UpdateGroupRequest) (*models.Group, error)
@@ -34,10 +34,13 @@ type EventService interface {
 	GetEventsByGroup(ctx context.Context, userID, groupID uuid.UUID) ([]models.Event, error)
 	GetEventByID(ctx context.Context, userID, groupID, eventID uuid.UUID) (*models.Event, error)
 	CreateEvent(ctx context.Context, userID, groupID uuid.UUID, cer *models.CreateEventRequest) (*models.Event, error)
-	UpdateEvent(ctx context.Context, userID, groupID, eventID uuid.UUID, uer *models.UpdateEventRequest) (*models.Event, error)
+	//UpdateEvent(ctx context.Context, userID, groupID, eventID uuid.UUID, uer *models.UpdateEventRequest) (*models.Event, error)
 	DeleteEvent(ctx context.Context, userID, groupID, eventID uuid.UUID) error
 
 	SetEventRecordValue(ctx context.Context, userID, groupID, eventID, recordID uuid.UUID, value *models.EventRecordValue) error
+
+	CreateEventComment(ctx context.Context, userID, groupID, eventID uuid.UUID, ccr *models.CreateCommentRequest) error
+	GetEventComments(ctx context.Context, userID, groupID, eventID uuid.UUID) ([]models.EventComment, error)
 }
 
 type Server struct {
